[package]
name = "async_data"
version = "0.1.0"
authors = ["filippo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
tokio = { version = "0.2", default-features = false, features = ["full", "rt-threaded", "io-util"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = "*"
futures = "0.3.0"
futures-channel = "0.3"
tungstenite="*"
url="2.0.0"
